--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,19 @@
 bitsandbytes
-datasets
+datasets==2.17.0
 deepspeed==0.13.5
 einops
+fire==0.6.0
 flash-attn==2.4.2
+fsspec==2023.4.0
+ipdb==0.13.13
 isort
 jsonlines
 loralib
+openai==1.14.0
 optimum
 peft
 ray[default]
+tiktoken==0.6.0
 torch
 torchmetrics
 tqdm
